@@ -31,6 +31,7 @@ AC_PROG_CC
 
 XORG_PROG_RAWCPP
 
+XORG_MANPAGE_SECTIONS
 XORG_RELEASE_VERSION
 
 AC_OUTPUT([Makefile])
