@@ -1,3 +1,9 @@
+2005-12-08  Kevin E. Martin  <kem-at-freedesktop-dot-org>
+
+	* Makefile.am:
+	* configure.ac:
+	Add man page processing.
+
 2005-12-08  Adam Jackson  <ajax@freedesktop.org>
 
 	* configure.ac:
